--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "translation",
 	"description": "HBuilderX翻译插件，集成多个翻译引擎(百度翻译、腾讯翻译、阿里翻译、谷歌翻译)。",
 	"displayName": "翻译插件",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"publisher": "青明尘下",
 	"engines": {
 		"HBuilderX": "^3.8.5"
@@ -55,6 +55,25 @@
 					"type": "string",
 					"default": "",
 					"description": "谷歌翻译 服务器配置 例如 https://translate.google.com"
+				},
+				"translation.time": {
+					"type": "number",
+					"default": 3,
+					"description": "翻译结果自动隐藏时间",
+					"enum": [
+						3,
+						10,
+						20,
+						60,
+						-1
+					],
+					"enumDescriptions": [
+						"3秒",
+						"10秒",
+						"20秒",
+						"60秒",
+						"永不隐藏"
+					]
 				}
 			}
 		},
@@ -95,8 +114,7 @@
 				}
 			}
 		},
-		"commands": [
-			{
+		"commands": [{
 				"command": "extension.translation",
 				"title": "翻译"
 			},
@@ -110,8 +128,7 @@
 			}
 		],
 		"menus": {
-			"editor/context": [
-				{
+			"editor/context": [{
 					"command": "extension.translation",
 					"group": "z_commands",
 					"when": "editorHasSelection"
@@ -131,8 +148,7 @@
 				}
 			]
 		},
-		"keybindings": [
-			{
+		"keybindings": [{
 				"command": "extension.translation",
 				"key": "Ctrl+Shift+Y",
 				"when": "editorHasSelection",
