✨ feat: 新增通知栏翻译模式及配置

--- a/package.json
+++ b/package.json
@@ -108,6 +108,11 @@
 						"社交",
 						"金融"
 					]
+				},
+				"translation.zTranslateMode": {
+					"type": "boolean",
+					"default": false,
+					"description": "启用通知栏翻译模式"
 				}
 			}
 		},
