--- a/package.json
+++ b/package.json
@@ -165,6 +165,10 @@
 			{
 				"command": "extension.translationReplace",
 				"title": "翻译替换"
+			},
+			{
+				"command": "extension.wordMapping",
+				"title": "单词映射"
 			}
 		],
 		"menus": {
@@ -187,6 +191,17 @@
 				{
 					"group": "z_commands"
 				}
+			],
+			"menubar/tool": [
+				{
+					"id":"translation",
+					"title": "翻译插件",
+					"group": "ext_settings"
+			   },
+			   {
+					"command": "extension.wordMapping",
+					"group": "translation@1"
+			   }
 			]
 		},
 		"keybindings": [
