--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"id": "translation",
 	"name": "translation",
-	"description": "HBuilderX翻译插件，集成多个翻译引擎(百度翻译、腾讯翻译、阿里翻译、谷歌翻译)。",
+	"description": "HBuilderX翻译插件，集成多个翻译引擎(百度翻译、腾讯翻译、阿里翻译、谷歌翻译)，并引入测试性功能语音朗读。",
 	"displayName": "翻译插件",
-	"version": "1.5.0",
+	"version": "1.5.2",
 	"publisher": "青明尘下",
 	"engines": {
 		"HBuilderX": "^3.8.5"
